3º_TL/Actividad5/expresiones.output
Grammar

    0 $accept: entrada $end

    1 entrada: ε
    2        | entrada linea

    3 linea: ID ASIGNACION expr '\n'
    4      | ID ASIGNACION logico '\n'
    5      | SALIR '\n'
    6      | error '\n'

    7 logico: BOOLEANO
    8       | logico AND logico
    9       | logico OR logico
   10       | logico EQUALS logico
   11       | logico NOTEQUALS logico
   12       | expr EQUALS expr
   13       | expr NOTEQUALS expr
   14       | expr '<' expr
   15       | expr '>' expr
   16       | expr LOWEREQUALS expr
   17       | expr GREATEREQUALS expr
   18       | NOT logico
   19       | '(' logico ')'

   20 expr: ENTERO
   21     | REAL
   22     | expr '+' expr
   23     | expr '-' expr
   24     | expr '*' expr
   25     | expr DIV expr
   26     | expr '/' expr
   27     | expr '%' expr
   28     | expr '^' expr
   29     | '-' expr
   30     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4 5 6
    '%' (37) 27
    '(' (40) 19 30
    ')' (41) 19 30
    '*' (42) 24
    '+' (43) 22
    '-' (45) 23 29
    '/' (47) 26
    '<' (60) 14
    '>' (62) 15
    '^' (94) 28
    error (256) 6
    SALIR (258) 5
    DIV (259) 25
    AND (260) 8
    OR (261) 9
    NOT (262) 18
    EQUALS (263) 10 12
    NOTEQUALS (264) 11 13
    LOWEREQUALS (265) 16
    GREATEREQUALS (266) 17
    ASIGNACION (267) 3 4
    ENTERO <c_entero> (268) 20
    REAL <c_real> (269) 21
    ID <var> (270) 3 4
    BOOLEANO <c_bool> (271) 7
    menos (272)


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    entrada (30)
        on left: 1 2
        on right: 0 2
    linea (31)
        on left: 3 4 5 6
        on right: 2
    logico <c_bool> (32)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 4 8 9 10 11 18 19
    expr <c_expresion> (33)
        on left: 20 21 22 23 24 25 26 27 28 29 30
        on right: 3 12 13 14 15 16 17 22 23 24 25 26 27 28 29 30


State 0

    0 $accept: • entrada $end

    $default  reduce using rule 1 (entrada)

    entrada  go to state 1


State 1

    0 $accept: entrada • $end
    2 entrada: entrada • linea

    $end   shift, and go to state 2
    error  shift, and go to state 3
    SALIR  shift, and go to state 4
    ID     shift, and go to state 5

    linea  go to state 6


State 2

    0 $accept: entrada $end •

    $default  accept


State 3

    6 linea: error • '\n'

    '\n'  shift, and go to state 7


State 4

    5 linea: SALIR • '\n'

    '\n'  shift, and go to state 8


State 5

    3 linea: ID • ASIGNACION expr '\n'
    4      | ID • ASIGNACION logico '\n'

    ASIGNACION  shift, and go to state 9


State 6

    2 entrada: entrada linea •

    $default  reduce using rule 2 (entrada)


State 7

    6 linea: error '\n' •

    $default  reduce using rule 6 (linea)


State 8

    5 linea: SALIR '\n' •

    $default  reduce using rule 5 (linea)


State 9

    3 linea: ID ASIGNACION • expr '\n'
    4      | ID ASIGNACION • logico '\n'

    NOT       shift, and go to state 10
    ENTERO    shift, and go to state 11
    REAL      shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    logico  go to state 16
    expr    go to state 17


State 10

   18 logico: NOT • logico

    NOT       shift, and go to state 10
    ENTERO    shift, and go to state 11
    REAL      shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    logico  go to state 18
    expr    go to state 19


State 11

   20 expr: ENTERO •

    $default  reduce using rule 20 (expr)


State 12

   21 expr: REAL •

    $default  reduce using rule 21 (expr)


State 13

    7 logico: BOOLEANO •

    $default  reduce using rule 7 (logico)


State 14

   29 expr: '-' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 21


State 15

   19 logico: '(' • logico ')'
   30 expr: '(' • expr ')'

    NOT       shift, and go to state 10
    ENTERO    shift, and go to state 11
    REAL      shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    logico  go to state 22
    expr    go to state 23


State 16

    4 linea: ID ASIGNACION logico • '\n'
    8 logico: logico • AND logico
    9       | logico • OR logico
   10       | logico • EQUALS logico
   11       | logico • NOTEQUALS logico

    AND        shift, and go to state 24
    OR         shift, and go to state 25
    EQUALS     shift, and go to state 26
    NOTEQUALS  shift, and go to state 27
    '\n'       shift, and go to state 28


State 17

    3 linea: ID ASIGNACION expr • '\n'
   12 logico: expr • EQUALS expr
   13       | expr • NOTEQUALS expr
   14       | expr • '<' expr
   15       | expr • '>' expr
   16       | expr • LOWEREQUALS expr
   17       | expr • GREATEREQUALS expr
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV            shift, and go to state 29
    EQUALS         shift, and go to state 30
    NOTEQUALS      shift, and go to state 31
    LOWEREQUALS    shift, and go to state 32
    GREATEREQUALS  shift, and go to state 33
    '<'            shift, and go to state 34
    '>'            shift, and go to state 35
    '+'            shift, and go to state 36
    '-'            shift, and go to state 37
    '*'            shift, and go to state 38
    '/'            shift, and go to state 39
    '%'            shift, and go to state 40
    '^'            shift, and go to state 41
    '\n'           shift, and go to state 42


State 18

    8 logico: logico • AND logico
    9       | logico • OR logico
   10       | logico • EQUALS logico
   11       | logico • NOTEQUALS logico
   18       | NOT logico •

    $default  reduce using rule 18 (logico)


State 19

   12 logico: expr • EQUALS expr
   13       | expr • NOTEQUALS expr
   14       | expr • '<' expr
   15       | expr • '>' expr
   16       | expr • LOWEREQUALS expr
   17       | expr • GREATEREQUALS expr
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV            shift, and go to state 29
    EQUALS         shift, and go to state 30
    NOTEQUALS      shift, and go to state 31
    LOWEREQUALS    shift, and go to state 32
    GREATEREQUALS  shift, and go to state 33
    '<'            shift, and go to state 34
    '>'            shift, and go to state 35
    '+'            shift, and go to state 36
    '-'            shift, and go to state 37
    '*'            shift, and go to state 38
    '/'            shift, and go to state 39
    '%'            shift, and go to state 40
    '^'            shift, and go to state 41


State 20

   30 expr: '(' • expr ')'

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 43


State 21

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr
   29     | '-' expr •

    $default  reduce using rule 29 (expr)


State 22

    8 logico: logico • AND logico
    9       | logico • OR logico
   10       | logico • EQUALS logico
   11       | logico • NOTEQUALS logico
   19       | '(' logico • ')'

    AND        shift, and go to state 24
    OR         shift, and go to state 25
    EQUALS     shift, and go to state 26
    NOTEQUALS  shift, and go to state 27
    ')'        shift, and go to state 44


State 23

   12 logico: expr • EQUALS expr
   13       | expr • NOTEQUALS expr
   14       | expr • '<' expr
   15       | expr • '>' expr
   16       | expr • LOWEREQUALS expr
   17       | expr • GREATEREQUALS expr
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr
   30     | '(' expr • ')'

    DIV            shift, and go to state 29
    EQUALS         shift, and go to state 30
    NOTEQUALS      shift, and go to state 31
    LOWEREQUALS    shift, and go to state 32
    GREATEREQUALS  shift, and go to state 33
    '<'            shift, and go to state 34
    '>'            shift, and go to state 35
    '+'            shift, and go to state 36
    '-'            shift, and go to state 37
    '*'            shift, and go to state 38
    '/'            shift, and go to state 39
    '%'            shift, and go to state 40
    '^'            shift, and go to state 41
    ')'            shift, and go to state 45


State 24

    8 logico: logico AND • logico

    NOT       shift, and go to state 10
    ENTERO    shift, and go to state 11
    REAL      shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    logico  go to state 46
    expr    go to state 19


State 25

    9 logico: logico OR • logico

    NOT       shift, and go to state 10
    ENTERO    shift, and go to state 11
    REAL      shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    logico  go to state 47
    expr    go to state 19


State 26

   10 logico: logico EQUALS • logico

    NOT       shift, and go to state 10
    ENTERO    shift, and go to state 11
    REAL      shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    logico  go to state 48
    expr    go to state 19


State 27

   11 logico: logico NOTEQUALS • logico

    NOT       shift, and go to state 10
    ENTERO    shift, and go to state 11
    REAL      shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    logico  go to state 49
    expr    go to state 19


State 28

    4 linea: ID ASIGNACION logico '\n' •

    $default  reduce using rule 4 (linea)


State 29

   25 expr: expr DIV • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 50


State 30

   12 logico: expr EQUALS • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 51


State 31

   13 logico: expr NOTEQUALS • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 52


State 32

   16 logico: expr LOWEREQUALS • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 53


State 33

   17 logico: expr GREATEREQUALS • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 54


State 34

   14 logico: expr '<' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 55


State 35

   15 logico: expr '>' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 56


State 36

   22 expr: expr '+' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 57


State 37

   23 expr: expr '-' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 58


State 38

   24 expr: expr '*' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 59


State 39

   26 expr: expr '/' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 60


State 40

   27 expr: expr '%' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 61


State 41

   28 expr: expr '^' • expr

    ENTERO  shift, and go to state 11
    REAL    shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 62


State 42

    3 linea: ID ASIGNACION expr '\n' •

    $default  reduce using rule 3 (linea)


State 43

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr
   30     | '(' expr • ')'

    DIV  shift, and go to state 29
    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41
    ')'  shift, and go to state 45


State 44

   19 logico: '(' logico ')' •

    $default  reduce using rule 19 (logico)


State 45

   30 expr: '(' expr ')' •

    $default  reduce using rule 30 (expr)


State 46

    8 logico: logico • AND logico
    8       | logico AND logico •
    9       | logico • OR logico
   10       | logico • EQUALS logico
   11       | logico • NOTEQUALS logico

    EQUALS     shift, and go to state 26
    NOTEQUALS  shift, and go to state 27

    $default  reduce using rule 8 (logico)


State 47

    8 logico: logico • AND logico
    9       | logico • OR logico
    9       | logico OR logico •
   10       | logico • EQUALS logico
   11       | logico • NOTEQUALS logico

    EQUALS     shift, and go to state 26
    NOTEQUALS  shift, and go to state 27

    $default  reduce using rule 9 (logico)


State 48

    8 logico: logico • AND logico
    9       | logico • OR logico
   10       | logico • EQUALS logico
   10       | logico EQUALS logico •
   11       | logico • NOTEQUALS logico

    $default  reduce using rule 10 (logico)


State 49

    8 logico: logico • AND logico
    9       | logico • OR logico
   10       | logico • EQUALS logico
   11       | logico • NOTEQUALS logico
   11       | logico NOTEQUALS logico •

    $default  reduce using rule 11 (logico)


State 50

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   25     | expr DIV expr •
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    '^'  shift, and go to state 41

    $default  reduce using rule 25 (expr)


State 51

   12 logico: expr EQUALS expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV  shift, and go to state 29
    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41

    $default  reduce using rule 12 (logico)


State 52

   13 logico: expr NOTEQUALS expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV  shift, and go to state 29
    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41

    $default  reduce using rule 13 (logico)


State 53

   16 logico: expr LOWEREQUALS expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV  shift, and go to state 29
    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41

    $default  reduce using rule 16 (logico)


State 54

   17 logico: expr GREATEREQUALS expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV  shift, and go to state 29
    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41

    $default  reduce using rule 17 (logico)


State 55

   14 logico: expr '<' expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV  shift, and go to state 29
    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41

    $default  reduce using rule 14 (logico)


State 56

   15 logico: expr '>' expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV  shift, and go to state 29
    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41

    $default  reduce using rule 15 (logico)


State 57

   22 expr: expr • '+' expr
   22     | expr '+' expr •
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV  shift, and go to state 29
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41

    $default  reduce using rule 22 (expr)


State 58

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   23     | expr '-' expr •
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    DIV  shift, and go to state 29
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '%'  shift, and go to state 40
    '^'  shift, and go to state 41

    $default  reduce using rule 23 (expr)


State 59

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   24     | expr '*' expr •
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr

    '^'  shift, and go to state 41

    $default  reduce using rule 24 (expr)


State 60

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   26     | expr '/' expr •
   27     | expr • '%' expr
   28     | expr • '^' expr

    '^'  shift, and go to state 41

    $default  reduce using rule 26 (expr)


State 61

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   27     | expr '%' expr •
   28     | expr • '^' expr

    '^'  shift, and go to state 41

    $default  reduce using rule 27 (expr)


State 62

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • DIV expr
   26     | expr • '/' expr
   27     | expr • '%' expr
   28     | expr • '^' expr
   28     | expr '^' expr •

    $default  reduce using rule 28 (expr)
